src/index.css
body {
  min-width: 320px;
  min-height: 100vh;
}

:root {
  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;
}

#root {
  position: relative;

  display: flex;
  flex-direction: column;

  min-height: 100dvh;
}

main {
  flex-grow: 1;
}

a {
  text-decoration: none;
}

p {
  margin: 0;
}

